# kinematics-dynamics

./: .travis.yml
examples/python/: exampleCartesianControlClient.py
libraries/YarpPlugins/AmorCartesianControl/: AmorCartesianControl.hpp  DeviceDriverImpl.cpp
libraries/YarpPlugins/AsibotSolver/: AsibotSolver.cpp  AsibotSolverImpl.cpp  CMakeLists.txt
libraries/YarpPlugins/BasicCartesianControl/: BasicCartesianControl.cpp  BasicCartesianControl.hpp  DeviceDriverImpl.cpp  ICartesianControlImpl.cpp
libraries/YarpPlugins/CartesianControlServer/: RpcResponder.cpp
libraries/YarpPlugins/KdlSolver/: CMakeLists.txt  KdlSolver.cpp
programs/: CMakeLists.txt
programs/gravityCompensation/: CMakeLists.txt  GravityCompensation.cpp  GravityCompensation.hpp  main.cpp
programs/streamingDeviceController/: SpnavSensorDevice.cpp
programs/transCoords/: TransCoords.cpp
tests/: CMakeLists.txt  testKdlSolver.cpp
